FIx TotalBalance typos

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,4 +1,6 @@
-$primary: rgb(53, 82, 107);
-$secondary: rgb(109, 129, 148);
+$primary: #35526b;
+$secondary: #6d8194;
 
-$grey: rgb(242, 244, 245);
+$grey: #f2f4f5;
+
+$light-blue: #e2eef0;
