--- a/src/components/Atom/CalendarFormat/CalendarFormat.scss
+++ b/src/components/Atom/CalendarFormat/CalendarFormat.scss
@@ -5,22 +5,53 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background: $white;
+
+  position: relative;
+
   width: 7rem;
-  height: 7rem;
+  padding-bottom: 0.4rem;
+
   border: 1px solid $grey;
   border-radius: 10px;
-  box-shadow: 3px 3px 0px 0px $light-blue;
+
+  box-shadow: 3px 3px 10px 3px $light-blue;
+
+  &__year-wrapper {
+    display: flex;
+    justify-content: center;
+
+    position: absolute;
+    top: 0;
+
+    padding: 0.2rem;
+    width: 100%;
+
+    background-color: $primary;
+    border-radius: 10px 10px 0 0;
+  }
+
+  &__year {
+    color: $white;
+    font-size: 1.5rem;
+    font-weight: 600;
+  }
 
   &__day {
     font-size: 2.5rem;
     font-weight: 600;
+
     text-align: center;
+
     color: $primary;
+    margin-top: 2.5rem;
   }
 
   &__month {
     font-size: 1.5rem;
+
     text-align: center;
+
     color: $secondary;
   }
 }
