Create TransactionDetail component

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -2,5 +2,9 @@ $primary: #35526b;
 $secondary: #6d8194;
 
 $grey: #f2f4f5;
+$green: #4caf50;
+$red: #f44336;
 
 $light-blue: #e2eef0;
+
+$white: #fff;
