--- a/src/components/Atom/Select/Select.scss
+++ b/src/components/Atom/Select/Select.scss
@@ -5,6 +5,9 @@
   flex-direction: column;
   width: 100%;
 
+  margin-bottom: 2rem;
+  margin-top: 0.5rem;
+
   &--error {
     .input__field,
     .input__field:focus {
