--- a/src/components/Molecule/TotalBalance/TotalBalance.scss
+++ b/src/components/Molecule/TotalBalance/TotalBalance.scss
@@ -3,7 +3,7 @@
 .balance {
   display: flex;
   flex-direction: column;
-  width: 60rem;
+  width: 100%;
   align-items: center;
   justify-content: space-around;
   background-color: $grey;
@@ -11,14 +11,14 @@
   border-radius: 20px;
 
   &__title {
-    font-size: 4rem;
+    font-size: 3rem;
     font-weight: 400;
     text-align: center;
     color: $secondary;
   }
 
   &__value {
-    font-size: 8rem;
+    font-size: 5rem;
     font-weight: 600;
     text-align: center;
     color: $primary;
