--- a/src/components/Organism/TransactionHistory/TransactionHistory.scss
+++ b/src/components/Organism/TransactionHistory/TransactionHistory.scss
@@ -2,8 +2,10 @@
 @import '../../../styles/mixins';
 
 .transaction-history {
+  width: 100%;
+
   &__title {
-    font-size: 3rem;
+    font-size: 2.3rem;
     color: $secondary;
   }
 
