--- a/src/pages/AccountPage/AccountPage.scss
+++ b/src/pages/AccountPage/AccountPage.scss
@@ -1,6 +1,25 @@
-.page {
-  &-welcome {
-    flex-direction: column;
-    justify-content: space-around;
+@import '../../styles/colors';
+
+.page-account {
+  flex-direction: column;
+
+  .open-form-btn {
+    background-color: $white;
+    font-size: 1.5rem;
+    font-weight: 500;
+    padding: 0.5rem 3rem;
+
+    color: $primary;
+    border: 2px solid $primary;
+
+    &:hover {
+      background-color: $primary;
+      color: $white;
+    }
+
+    &__content {
+      display: flex;
+      align-items: center;
+    }
   }
 }
