--- a/src/components/Molecule/TotalBalance/TotalBalance.scss
+++ b/src/components/Molecule/TotalBalance/TotalBalance.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/colors';
+@import '../../../styles/mixins';
 
 .balance {
   display: flex;
@@ -18,6 +19,10 @@
     font-weight: 400;
     text-align: center;
     color: $secondary;
+
+    @include respond(phone) {
+      font-size: 2.5rem;
+    }
   }
 
   &__value {
@@ -26,5 +31,9 @@
     text-align: center;
     color: $primary;
     word-break: break-word;
+
+    @include respond(phone) {
+      font-size: 4rem;
+    }
   }
 }
